2012-03-09  Paul Eggert  <eggert@cs.ucla.edu>

	[BZ #13673]
	* intl/plural.y: Replace FSF snail mail address with URL.
	* intl/plural.c: Regenerated.

2012-03-09  Richard Henderson  <rth@twiddle.net>

	* include/math_private.h: Remove file.
	* math/math_private.h: Move file ...
	* sysdeps/generic/math_private.h: ... here.

	* sysdeps/i386/fpu/math_private.h: Use include_next for math_private.h.
	* sysdeps/powerpc/fpu/math_private.h: Likewise.
	* sysdeps/x86_64/fpu/math_private.h: Likewise.

	* sysdeps/i386/fpu/s_fpclassifyl.c: Use <> to include both <math.h>
	and <math_private.h>.
	* sysdeps/i386/fpu/s_isinfl.c: Likewise.
	* sysdeps/i386/fpu/s_isnanl.c: Likewise.
	* sysdeps/i386/fpu/s_nextafterl.c: Likewise.
	* sysdeps/i386/fpu/s_nexttoward.c: Likewise.
	* sysdeps/i386/fpu/s_nexttowardf.c: Likewise.
	* sysdeps/ieee754/dbl-64/branred.c: Likewise.
	* sysdeps/ieee754/dbl-64/doasin.c: Likewise.
	* sysdeps/ieee754/dbl-64/dosincos.c: Likewise.
	* sysdeps/ieee754/dbl-64/e_acosh.c: Likewise.
	* sysdeps/ieee754/dbl-64/e_asin.c: Likewise.
	* sysdeps/ieee754/dbl-64/e_atan2.c: Likewise.
	* sysdeps/ieee754/dbl-64/e_atanh.c: Likewise.
	* sysdeps/ieee754/dbl-64/e_cosh.c: Likewise.
	* sysdeps/ieee754/dbl-64/e_exp.c: Likewise.
	* sysdeps/ieee754/dbl-64/e_fmod.c: Likewise.
	* sysdeps/ieee754/dbl-64/e_hypot.c: Likewise.
	* sysdeps/ieee754/dbl-64/e_j0.c: Likewise.
	* sysdeps/ieee754/dbl-64/e_j1.c: Likewise.
	* sysdeps/ieee754/dbl-64/e_jn.c: Likewise.
	* sysdeps/ieee754/dbl-64/e_lgamma_r.c: Likewise.
	* sysdeps/ieee754/dbl-64/e_log.c: Likewise.
	* sysdeps/ieee754/dbl-64/e_log10.c: Likewise.
	* sysdeps/ieee754/dbl-64/e_log2.c: Likewise.
	* sysdeps/ieee754/dbl-64/e_pow.c: Likewise.
	* sysdeps/ieee754/dbl-64/e_rem_pio2.c: Likewise.
	* sysdeps/ieee754/dbl-64/e_remainder.c: Likewise.
	* sysdeps/ieee754/dbl-64/e_sinh.c: Likewise.
	* sysdeps/ieee754/dbl-64/e_sqrt.c: Likewise.
	* sysdeps/ieee754/dbl-64/halfulp.c: Likewise.
	* sysdeps/ieee754/dbl-64/k_rem_pio2.c: Likewise.